<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab_Misc_Elements1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="37dp">


            <TextView
                android:id="@+id/EditTextLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/EditTextLable"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName" />


            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="166dp"
                android:layout_height="48dp"
                android:layout_marginTop="100dp"
                android:drawableLeft="@drawable/edit_text_person_ic"
                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/rightMargin_misc1"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="@+id/leftMargin_misc1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/dropdownLable"
                app:layout_constraintBottom_toTopOf="@+id/dropdown_menu"
                app:layout_constraintEnd_toEndOf="@+id/dropdown_menu"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="@+id/dropdown_menu" />


            <Spinner
                android:id="@+id/dropdown_menu"
                android:layout_width="191dp"
                android:layout_height="48dp"
                android:layout_marginTop="170dp"
                app:layout_constraintEnd_toStartOf="@+id/rightMargin_misc1"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="@+id/leftMargin_misc1"
                app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />

            <TextView
                android:id="@+id/autoCompleteLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/autocompleteLable"
                app:layout_constraintBottom_toTopOf="@+id/autoCompleteTextView"
                app:layout_constraintEnd_toEndOf="@+id/autoCompleteTextView"
                app:layout_constraintStart_toStartOf="@+id/autoCompleteTextView" />

            <!--
            <Button
                android:id="@+id/nextScreenBtn"
                android:layout_width="140dp"
                android:layout_height="52dp"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="72dp"
                android:drawableRight="@drawable/arrow_left"
                android:text="@string/btn_nextScreen"
                android:textAlignment="center"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            -->
            <!--__________________GUIDELINES____________________________-->


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="170dp"
                android:completionThreshold="1"
                android:hint="@string/autoCompleteHint"
                app:layout_constraintEnd_toStartOf="@+id/rightMargin_misc1"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="@+id/leftMargin_misc1"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftMargin_misc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightMargin_misc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/middleGuide_misc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/upperGuide_misc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/lowerGuide_misc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.60" />

            <Button
                android:id="@+id/drop_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="104dp"
                android:text="drop button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rightMargin_misc1"
                app:layout_constraintStart_toStartOf="@+id/leftMargin_misc1"
                app:layout_constraintTop_toBottomOf="@+id/dropdown_menu" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</FrameLayout>